[package]
name = "sdusrun"
version = "0.5.5"
authors = ["zu1k <i@zu1k.com>"]
edition = "2021"
description = "Srun authentication system login tools"
readme = "README.md"
homepage = "https://github.com/zu1k/sdusrun"
repository = "https://github.com/zu1k/sdusrun"
license = "GPL-3.0"
exclude = [".github/"]


[profile.release]
strip = true
lto = true


[dependencies]
base64 = "0.21.0"
getopts = "0.2"
hmac = "0.12"
if-addrs = "0.10"
once_cell = "1"
md-5 = "0.10"
quick-error = "2.0"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha-1 = "0.10"
ureq = { git = "https://github.com/zu1k/ureq.git", branch = "srun", default-features = false, optional = true }
log = "0.4"
pretty_env_logger = { git = "https://github.com/karin0/pretty-env-logger.git" }
url = "2.3"
nix = { version = "0.27", features = ["signal"] }
socket2 = "0.5"

[features]
default = ["ureq", "ureq/tls"]
